fixed setting collapse functionality

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -77,22 +77,22 @@ header .container nav ul
 
 header .container nav ul li
 {
-    background: whitesmoke;
+    background: black;
+    border: 1px solid black;
     position: relative;
     border-radius: 50px;
-    padding: 8px 15px 8px 15px;
+    padding: 4px 15px 4px 15px;
     margin: 0;
+    color: white;
     cursor: pointer;
     transition: 0.3s all ease-in-out;
 }
 
 header .container nav ul li:hover
 {
-    transform: scale(1.05);
-    color: white;
-    background: black;
+    background-color: white;
+    color: black;
     box-shadow: 0 0 5px whitesmoke;
-    border-radius: 50px;
 }
 
 
@@ -516,8 +516,8 @@ footer #footer-cred
     gap: .5rem;
     margin-top: 6px;
     padding: 2px 14px 2px 14px;
-    border-radius: 4px;
-    background-color: #EEEEEE;
+    border-radius: 2px;
+    border: 2px solid transparent;
     transition: 0.2s ease-in-out all;
 
     cursor: pointer;
@@ -525,8 +525,7 @@ footer #footer-cred
 
 #uiPopup ul li:hover
 {
-    background-color: black;
-    color: white;
+    background-color: #EEEEEE;
 }
 
 #uiPopup ul li img
